# python3-taskscheduler

./: README.md  pyproject.toml  setup.py
debian/: changelog  control  rules
src/taskscheduler/: taskscheduler.py
